--- a/main.css
+++ b/main.css
@@ -1,1 +1,29 @@
-s
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  line-height: 1.5;
+}
+
+body
+{
+    margin-top: 100px;
+    text-align: center;
+    background-image: url(assets/bck.jpg);
+    background-size: cover;
+}
+
+.h1
+{
+  font-family: 'Julius Sans One', sans-serif;
+  font-size: 2.5rem;
+  width: 90%;
+}
+
+.h5
+{
+  font-family: 'Crimson Text', serif;
+  font-size: 1.5rem;
+  font-style: italic;    
+}
